--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Leadership SPICES™ is coming soon. Stay tuned for updates!">
-    <title>Leadership SPICES™</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+    <meta name="description" content="A simple business website highlighting leadership principles.">
+    <title>Leadership SPICES&trade;</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1 id="main-heading">Leadership SPICES™</h1>
-        <p id="subtitle">is coming soon</p>
-        <p id="footer-text"></p>
-    </div>
+    <div id="header"></div>
+    <div id="content"></div>
+    <div id="footer"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
