--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>&copy; 2024 My Business. All rights reserved.</p>
+    <p>&copy; 2024 Leadership SPICES&trade;. All rights reserved.</p>
 </footer>
