--- a/home.html
+++ b/home.html
@@ -1,12 +1,8 @@
 <main>
     <section class="hero">
-        <h2>Welcome to Our Business</h2>
-        <p>We strive to lead with simplicity, peace, integrity, community, equality, and stewardship.</p>
+        <h2>Leadership SPICES&trade;</h2>
+        <p>Enfusing Leadership SPICES&trade;</p>
         <button>Learn More</button>
     </section>
 
-    <section class="introduction">
-        <h3>Our Core Values</h3>
-        <p>At the heart of our business are the SPICES&trade; principles. They guide our mission, shape our culture, and drive us to serve our clients and community responsibly.</p>
-    </section>
 </main>
