--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <main>
     <section class="hero">
         <h2>Leadership SPICES&trade;</h2>
-        <p>Enfusing Leadership SPICES&trade;</p>
+        <p>Building future leaderss by enfusing Leadership SPICES&trade;</p>
         <button>Learn More</button>
     </section>
 
