--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <h1>My Business</h1>
+        <h1>Leadership SPICES&trade;</h1>
     </div>
     <nav>
         <ul class="main-nav">
